--- a/.github/workflows/etl-workflow.yml
+++ b/.github/workflows/etl-workflow.yml
@@ -31,6 +31,7 @@ jobs:
 
     - name: Run tests
       run: |
+        mkdir -p logs
         python -m pytest tests/ --tb=short > logs/test_results.log 2>&1
         echo "Tests completed" >> logs/test_results.log
 
